[tool.poetry]
name = "pjagenda"
version = "0.1.0"
description = ""
authors = ["Walter Beauclair Fabris <wbfabris@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysimplegui = "^5.0.7"
streamlit = "^1.39.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
