[tool.poetry]
name = "pjagenda"
version = "0.1.0"
description = ""
authors = ["Walter Beauclair Fabris <wbfabris@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysimplegui = "^5.0.7"
streamlit = "^1.39.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pycep-correios = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
black = "^22.1.0"
taskipy = "^1.14.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.44"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
